--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -19,10 +20,12 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
     "ssh2": "^1.17.0",
-    "tunnel-ssh": "^5.2.0"
+    "tunnel-ssh": "^5.2.0",
+    "uuid": "^13.0.0"
   }
 }
