--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mysql2": "^3.15.3",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "ssh2": "^1.17.0",
     "tunnel-ssh": "^5.2.0",
     "uuid": "^13.0.0"
