--- a/serverless/model-api/package.json
+++ b/serverless/model-api/package.json
@@ -3,12 +3,24 @@
   "version": "1.0.0",
   "description": "Lambda function for ML model prediction API",
   "type": "module",
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "deploy": "serverless deploy",
+    "remove": "serverless remove",
+    "logs": "serverless logs -f predictModel -t"
+  },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.588.0",
     "@aws-sdk/client-s3": "^3.588.0",
     "@aws-sdk/lib-dynamodb": "^3.588.0",
-    "aws-sdk": "^2.1362.0",
-    "dotenv": "^17.2.3",
-    "onnxruntime-node": "^1.15.1"
+    "joi": "^17.11.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.8",
+    "aws-sdk-mock": "^5.8.0",
+    "jest": "^29.7.0",
+    "serverless": "^3.38.0",
+    "serverless-dotenv-plugin": "^6.0.0"
   }
 }
