--- a/serverless/model-api/package.json
+++ b/serverless/model-api/package.json
@@ -4,12 +4,13 @@
   "description": "Lambda function for ML model prediction API",
   "type": "commonjs",
   "dependencies": {
-    "mysql2": "^3.6.5",
     "@aws-sdk/client-dynamodb": "^3.917.0",
     "@aws-sdk/client-s3": "^3.917.0",
     "@aws-sdk/lib-dynamodb": "^3.917.0",
     "dotenv": "^17.2.3",
-    "onnxruntime-node": "^1.17.0"
+    "mysql2": "^3.6.5",
+    "onnxruntime-node": "^1.17.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "serverless": "^3.40.0",
