--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test:inference": "node scripts/testInference.js",
+    "test:aws-api": "node scripts/testAwsApiEndpoint.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.917.0",
+    "@aws-sdk/client-lambda": "^3.922.0",
     "@aws-sdk/client-s3": "^3.917.0",
     "@aws-sdk/lib-dynamodb": "^3.917.0",
     "@aws-sdk/lib-storage": "^3.917.0",
@@ -28,9 +31,13 @@
     "mysql2": "^3.15.3",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10",
+    "onnxruntime-node": "^1.23.0",
     "razorpay": "^2.9.6",
     "ssh2": "^1.17.0",
     "tunnel-ssh": "^5.2.0",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^6.0.0"
   }
 }
